HDS-1143 Add yield for BackLink, fix layout of Title, replace divs wrapping li's with ul, delete old file

--- a/packages/components/app/styles/components/side-nav.scss
+++ b/packages/components/app/styles/components/side-nav.scss
@@ -142,6 +142,8 @@
 }
 
 .hds-side-nav__list-title {
+  display: flex;
+  align-items: center;
   min-height: 34px;
   padding: 0 var(--token-side-nav-body-list-item-padding-horizontal);
   color: var(--token-side-nav-foreground-faint);
